--- a/01-mf-intro-slides/package.json
+++ b/01-mf-intro-slides/package.json
@@ -9,7 +9,10 @@
     "gatsby": "^2.24.40"
   },
   "scripts": {
-    "start": "mdx-deck deck.mdx"
+    "01": "mdx-deck 01_intro.mdx",
+    "02-1": "mdx-deck 02-1_first_project.mdx",
+    "02-2": "mdx-deck 02-2_iframes.mdx",
+    "03-1": "mdx-deck 03-1_ajax.mdx"
   },
   "author": "brainrepo",
   "license": "ISC",
