--- a/01-mf-intro-slides/package.json
+++ b/01-mf-intro-slides/package.json
@@ -12,7 +12,11 @@
     "01": "mdx-deck 01_intro.mdx",
     "02-1": "mdx-deck 02-1_first_project.mdx",
     "02-2": "mdx-deck 02-2_iframes.mdx",
-    "03-1": "mdx-deck 03-1_ajax.mdx"
+    "03-1": "mdx-deck 03-1_ajax.mdx",
+    "03-2": "mdx-deck 03-2_server_side_routing.mdx",
+    "04-1": "mdx-deck 04-1_server_side_composition.mdx",
+    "04-2": "mdx-deck 04-2_zalando_tailor.mdx",
+    "04-3": "mdx-deck 04-3_podium.mdx"
   },
   "author": "brainrepo",
   "license": "ISC",
